--- a/package.json
+++ b/package.json
@@ -13,8 +13,13 @@
     "apollo-server-express": "^3.6.6",
     "express": "^4.17.3",
     "graphql": "^15.8.0",
+    "nodemon": "^2.0.15",
     "reflect-metadata": "^0.1.13",
     "type-graphql": "^1.1.1",
     "typeorm": "^0.3.4"
+  },
+  "devDependencies": {
+    "ts-node": "^10.7.0",
+    "typescript": "^4.6.3"
   }
 }
